# structural-manifold-compression

./: .gitignore  AGI-lite.md  COMMANDS_TO_RUN.md  FAST_3080TI_COMMANDS.md  Makefile  README.md  app.py  debug_output.txt  draft.md  dual_stream_architecture_whitepaper.aux  dual_stream_architecture_whitepaper.out  fake_fact.txt  install_mamba.sh  manifold_lm_testing_whitepaper.md  mcp_server.py  pair_programmer_output.txt  pyproject.toml  requirements-mamba.txt  requirements.txt  run_full_demo.py  run_mamba.sh  run_quick_demo.sh  setup_mamba_env.sh  test_init.py  test_mcp_rpc.py  validation_harvester.py  watcher_output.txt
.kilocode/: mcp.json
cmake/: cuda_abs_fix.h  cuda_host_prefix.h  cuda_wrapper.h
demo/: __init__.py  build_corpus.py  common.py  evaluate.py  generate_manifold.py  retrieval.py  run_baseline_rag.py  run_baseline_suite.py  run_manifold_ablation.py  run_manifold_sweep.py  run_manifold_system.py  structure.py
docs/: DUAL_STREAM_README.md  dual_stream_architecture_whitepaper.md  dual_stream_architecture_whitepaper.tex  evidence_ladder.md  optical_structural_compression.md
manifold/: manifold.json
plans/: corpus_benchmark_plan.md  predictive_coding_architecture.md
results/: baseline_rag_results.json  baseline_suite.json  compression_metrics.json  manifold_ablation.json  manifold_reconstruction_sweep.json  manifold_results.json  manifold_results_no_sidecar.json  manifold_results_shuffled.json  qa_results.json
scripts/: compute_st_validation.py
src/: CMakeLists.txt
tests/: conftest.py  test_compression.py  test_demo_pipeline.py  test_sidecar.py  (+1 more)
(+100 files in other folders)
