[project]
name = "structural-manifold-compression"
version = "0.1.0"
description = "Text-only structural manifold compression benchmark suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
demo = [
    "matplotlib>=3.9.0",
    "pdfplumber>=0.11.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
